Update index Habilidades

--- a/index.html
+++ b/index.html
@@ -88,8 +88,11 @@
                     <li>HTML5 & CSS3</li>
                     <li>JavaScript</li>
                     <li>Diseño UI/UX</li>
-                    <li>Automatización</li>
+                    <li>Automatización con n8n</li>
                     <li>Gestión de redes sociales</li>
+                    <li>Photoshop & Illustrator </li>
+                    <li>Davinci Resolve, Capcut, After Effects</li>
+                    
                 </ul>
             </div>
         </div>
